@@ -1,3 +1,9 @@
+2004-07-16  Wim Taymans  <wim@fluendo.com>
+
+	* sys/ximage/ximagesink.c: (gst_ximagesink_xcontext_get):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
+	FPS seems to be 0.0 to MAX everywhere else.
+
 2004-07-15  Ronald Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst-libs/gst/riff/riff-media.c:
